--- a/AmmiFurnitures.Web/Views/Shared/_Footer.cshtml
+++ b/AmmiFurnitures.Web/Views/Shared/_Footer.cshtml
@@ -52,6 +52,6 @@
         </div>
         <hr>
 
-        <div class="row text-center"> © 2020 Vikash Furniture Group.</div>
+        <div class="row text-center"> © 2020 Ammi Furniture Group.</div>
     </div>
 </footer>
