--- a/AmmiFurnitures.Web/Views/Shared/_Header.cshtml
+++ b/AmmiFurnitures.Web/Views/Shared/_Header.cshtml
@@ -1,5 +1,5 @@
 ﻿<nav class="navbar navbar-expand-lg navbar-light bg-success">
-    <a class="navbar-brand" href="#"><img src="../images/logo.png" class="img-fluid w-25"></a>
+    <a class="navbar-brand" href="#"><img src="../images/logo.jpg" class="img-fluid" height="100" width="100"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
